ingress.yaml
# A manually constructed ingress to give us a URL into the opis service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: epics-opis
    ioc_group: p46
    location: bl46p
  name: epics-opis-static
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: epics-opis
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 172.23.168.217

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: p46-opis-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - p46-opis.diamond.ac.uk
  rules:
    - host: p46-opis.diamond.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epics-opis
                port:
                  number: 80
